WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53154
Fix multisampling support in DrawingBuffer
https://bugs.webkit.org/show_bug.cgi?id=53154
Summary
Fix multisampling support in DrawingBuffer
Kenneth Russell
Reported
2011-01-25 18:58:28 PST
Recent changes to the DrawingBuffer class to add antialiasing support to the accelerated 2D canvas code path had some bugs and were illegally using certain enums. These issues need to be fixed and the Chromium port implemented.
Attachments
Patch
(16.33 KB, patch)
2011-01-25 19:11 PST
,
Kenneth Russell
jamesr
: review+
kbr
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2011-01-25 19:11:15 PST
Created
attachment 80159
[details]
Patch
Stephen White
Comment 2
2011-01-25 21:25:06 PST
Comment on
attachment 80159
[details]
Patch Thanks!
Stephen White
Comment 3
2011-01-25 21:26:57 PST
Comment on
attachment 80159
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80159&action=review
> Source/WebKit/chromium/ChangeLog:10 > + GL_CHROMIUM_framebuffer_multisample) through WebGraphicsContext3D.
Not a blocker, but I'm not sure I understand why we don't plumb through the ANGLE extensions verbatim. Feel free to de-confuse me at your convenience. :)
James Robinson
Comment 4
2011-01-25 22:52:01 PST
Comment on
attachment 80159
[details]
Patch R=me. I'm also curious about the extension name mapping.
Kenneth Russell
Comment 5
2011-01-26 14:07:04 PST
Committed
r76717
: <
http://trac.webkit.org/changeset/76717
>
Kenneth Russell
Comment 6
2011-01-26 14:12:09 PST
(In reply to
comment #3
)
> (From update of
attachment 80159
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=80159&action=review
> > > Source/WebKit/chromium/ChangeLog:10 > > + GL_CHROMIUM_framebuffer_multisample) through WebGraphicsContext3D. > > Not a blocker, but I'm not sure I understand why we don't plumb through the ANGLE extensions verbatim. Feel free to de-confuse me at your convenience. :)
I don't remember why we decided to expose a different extension than GL_ANGLE_framebuffer_multisample and GL_ANGLE_framebuffer_blit from the command buffer code. The ANGLE extension is written against OpenGL ES 2.0, and maybe we wanted slightly different or relaxed semantics so that we didn't have to have absolutely identical behavior between desktop and OpenGL ES 2.0 implementations. CC'ing Gregg in case he remembers.
WebKit Review Bot
Comment 7
2011-01-26 14:52:22 PST
http://trac.webkit.org/changeset/76717
might have broken Qt Linux Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug