2011-01-26  Kenneth Russell  <kbr@google.com>

Reviewed by James Robinson.

        Fix multisampling support in DrawingBuffer
        https://bugs.webkit.org/show_bug.cgi?id=53154

        Plumbed GL_ANGLE_framebuffer_multisample and
        GL_ANGLE_framebuffer_blit (exposed as the unified extension
        GL_CHROMIUM_framebuffer_multisample) through WebGraphicsContext3D.

        * public/WebGraphicsContext3D.h:
        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::blitFramebuffer):
        (WebCore::Extensions3DChromium::renderbufferStorageMultisample):
        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::supportsExtension):
        (WebCore::GraphicsContext3DInternal::ensureExtensionEnabled):
        * src/GraphicsContext3DInternal.h:
2011-01-26  Kenneth Russell  <kbr@google.com>

        Reviewed by James Robinson.

        Fix multisampling support in DrawingBuffer
        https://bugs.webkit.org/show_bug.cgi?id=53154

        In DrawingBuffer's multisampling code path, fixed enum usage and a
        bug where it would incorrectly redefine the depth and stencil
        buffers. Hooked up multisampling code path in Chromium port.

        Tested manually with some accelerated 2D canvas content.
        Multisampling isn't being switched on for the accelerated 2D
        canvas at the current time because it will increase fill rate
        requirements and cause a large number of rebaselines.

        * platform/graphics/Extensions3D.h:
        * platform/graphics/chromium/DrawingBufferChromium.cpp:
        (WebCore::DrawingBuffer::publishToPlatformLayer):
        * platform/graphics/chromium/Extensions3DChromium.h:
        * platform/graphics/gpu/DrawingBuffer.cpp:
        (WebCore::DrawingBuffer::create):
        (WebCore::DrawingBuffer::reset):
        * platform/graphics/opengl/Extensions3DOpenGL.cpp:
        (WebCore::Extensions3DOpenGL::supports):


Canonical link: https://commits.webkit.org/66937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76717 268f45cc-cd09-0410-ab3c-d52691b4dbfc